--- a/Hikouki2/.project
+++ b/Hikouki2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Hikouki2</name>
+	<name>opengl_game</name>
 	<comment></comment>
 	<projects>
 	</projects>
