--- a/OpenGL_Game/.cproject
+++ b/OpenGL_Game/.cproject
@@ -48,6 +48,8 @@
 									<listOptionValue builtIn="false" value="glut"/>
 									<listOptionValue builtIn="false" value="GLU"/>
 									<listOptionValue builtIn="false" value="GL"/>
+									<listOptionValue builtIn="false" value="alut"/>
+									<listOptionValue builtIn="false" value="openal"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1359045470" name="ライブラリー検索パス (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
 									<listOptionValue builtIn="false" value="../64/lib/"/>
